--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorBackGround">#e0e0e0</color>
+    <color name="colorTextArea">#212121</color>
+    <color name="colorNumberButton">#fafafa</color>
+    <color name="colorControlButton">#eeeeee</color>
 </resources>
