--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,14 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="ButtonStyle">
+        <item name="android:background">@color/colorControlButton</item>
+        <item name="android:textSize">@dimen/midText</item>
+        <item name="android:layout_margin">@dimen/minMargin</item>
+        <item name="android:textColor">@color/colorTextArea</item>
+        <item name="android:padding">@dimen/buttonPudding</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+    </style>
+
 </resources>
