--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,17 +9,18 @@
         android:layout_margin="@dimen/midMargin"
         android:background="@color/colorBackGround"
         android:textSize="@dimen/largeText"
-        android:padding="@dimen/minPadding"
+        android:padding="@dimen/midPadding"
         android:textAlignment="textEnd"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:textColor="@color/colorTextArea"
-        android:text="@string/initTextAreaValue" />
+        android:text="@string/initTextAreaValue"/>
 
     <TableLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:weightSum="6"
+        android:padding="@dimen/minPadding"
         android:layout_marginRight="@dimen/midMargin"
         android:layout_marginLeft="@dimen/midMargin"
         android:layout_marginBottom="@dimen/midMargin"
@@ -144,7 +145,6 @@
                 android:text="@string/equals"
                 style="@style/ButtonStyle"/>
         </TableRow>
-
     </TableLayout>
 </LinearLayout>
 
