--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,8 +25,8 @@
         android:layout_marginLeft="@dimen/midMargin"
         android:layout_marginBottom="@dimen/midMargin"
         android:background="@color/colorBackGround"
-        android:stretchColumns="*"
-        >
+        android:stretchColumns="*">
+
         <TableRow android:layout_weight="1">
             <Button
                 android:id="@+id/bPercent"
