done dynamical creation of buttons

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,7 @@
         android:text="@string/initTextAreaValue"/>
 
     <TableLayout
+        android:id="@+id/tlContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:weightSum="6"
@@ -26,125 +27,6 @@
         android:layout_marginBottom="@dimen/midMargin"
         android:background="@color/colorBackGround"
         android:stretchColumns="*">
-
-        <TableRow android:layout_weight="1">
-            <Button
-                android:id="@+id/bPercent"
-                android:text="@string/percent"
-                style="@style/ButtonStyle"/>
-            <Button
-                android:id="@+id/bSqrt"
-                android:text="@string/sqrt"
-                style="@style/ButtonStyle"/>
-            <Button
-                android:id="@+id/bSqr"
-                android:text="@string/xSquared"
-                style="@style/ButtonStyle"/>
-            <Button
-                android:id="@+id/bOneDivX"
-                android:text="@string/_1_x"
-                style="@style/ButtonStyle"/>
-        </TableRow>
-        <TableRow android:layout_weight="1">
-            <Button
-                android:id="@+id/bCE"
-                android:text="@string/ce"
-                style="@style/ButtonStyle"/>
-            <Button
-                android:id="@+id/bC"
-                android:text="@string/c"
-                style="@style/ButtonStyle"/>
-            <Button
-                android:id="@+id/bDeleteLast"
-                android:text="@string/deleteLast"
-                style="@style/ButtonStyle"/>
-            <Button
-                android:id="@+id/bDivide"
-                android:text="@string/delete"
-                style="@style/ButtonStyle"/>
-        </TableRow>
-        <TableRow android:layout_weight="1">
-            <Button
-                android:id="@+id/bSeven"
-                android:text="@string/seven"
-                style="@style/ButtonStyle"
-                android:background="@color/colorNumberButton"/>
-            <Button
-                android:id="@+id/bEight"
-                android:text="@string/eight"
-                style="@style/ButtonStyle"
-                android:background="@color/colorNumberButton"/>
-            <Button
-                android:id="@+id/bNine"
-                android:text="@string/nine"
-                style="@style/ButtonStyle"
-                android:background="@color/colorNumberButton"/>
-            <Button
-                android:id="@+id/bMultiply"
-                android:text="@string/multiply"
-                style="@style/ButtonStyle"/>
-        </TableRow>
-        <TableRow android:layout_weight="1">
-            <Button
-                android:id="@+id/bFour"
-                android:text="@string/four"
-                style="@style/ButtonStyle"
-                android:background="@color/colorNumberButton"/>
-            <Button
-                android:id="@+id/bFive"
-                android:text="@string/five"
-                style="@style/ButtonStyle"
-                android:background="@color/colorNumberButton"/>
-            <Button
-                android:id="@+id/bSix"
-                android:text="@string/six"
-                style="@style/ButtonStyle"
-                android:background="@color/colorNumberButton"/>
-            <Button
-                android:id="@+id/bMinus"
-                android:text="@string/minus"
-                style="@style/ButtonStyle"/>
-        </TableRow>
-        <TableRow android:layout_weight="1">
-            <Button
-                android:id="@+id/bOne"
-                android:text="@string/one"
-                style="@style/ButtonStyle"
-                android:background="@color/colorNumberButton"/>
-            <Button
-                android:id="@+id/bTwo"
-                android:text="@string/two"
-                style="@style/ButtonStyle"
-                android:background="@color/colorNumberButton"/>
-            <Button
-                android:id="@+id/bThree"
-                android:text="@string/three"
-                style="@style/ButtonStyle"
-                android:background="@color/colorNumberButton"/>
-            <Button
-                android:id="@+id/bPlus"
-                android:text="@string/plus"
-                style="@style/ButtonStyle"/>
-        </TableRow>
-        <TableRow android:layout_weight="1">
-            <Button
-                android:id="@+id/bChangeSing"
-                android:text="@string/changeSign"
-                style="@style/ButtonStyle"/>
-            <Button
-                android:id="@+id/bZero"
-                android:text="@string/zero"
-                style="@style/ButtonStyle"
-                android:background="@color/colorNumberButton"/>
-            <Button
-                android:id="@+id/bComa"
-                android:text="@string/coma"
-                style="@style/ButtonStyle"/>
-            <Button
-                android:id="@+id/bEquals"
-                android:text="@string/equals"
-                style="@style/ButtonStyle"/>
-        </TableRow>
     </TableLayout>
 </LinearLayout>
 
