--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,4 +17,8 @@
         <item name="android:layout_width">0px</item>
     </style>
 
+    <style name="ButtonNumberStyle" parent="ButtonStyle">
+        <item name="android:background">@color/colorNumberButton</item>
+    </style>
+
 </resources>
