--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,10 @@
         android:layout_margin="@dimen/midMargin"
         android:background="@color/colorBackGround"
         android:textSize="@dimen/largeText"
-        android:padding="@dimen/midPadding"
+        android:paddingEnd="@dimen/midPadding"
+        android:paddingStart="@dimen/midPadding"
+        android:paddingLeft="@dimen/minPadding"
+        android:paddingRight="@dimen/minPadding"
         android:textAlignment="textEnd"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
